--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/MichaelDuo/duo-mindmap#readme",
   "devDependencies": {
+    "@types/uuid": "^7.0.0",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
@@ -28,5 +29,8 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "uuid": "^7.0.2"
   }
 }
