--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
-    "compilerOptions": {
-        "outDir": "dist",
-        "sourceMap": true,
-        "noImplicitAny": true,
-        "module": "commonjs",
-        "target": "es6",
-        "esModuleInterop": true,
+	"compilerOptions": {
+		"outDir": "dist",
+		"sourceMap": true,
+		"noImplicitAny": true,
+		"module": "commonjs",
+		"target": "es6",
+		"esModuleInterop": true,
 		"strict": true,
 		"baseUrl": ".",
 		"paths": {
-			"*": ["*"]
+			"*": ["src/*"]
 		}
-    },
-    "include": ["src/**/*"],
+	},
+	"include": ["src/**/*"],
 	"exclude": ["node_modules"]
 }
