--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "duo-mindmap",
-  "version": "1.0.0",
-  "description": "",
-  "main": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "webpack-dev-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MichaelDuo/duo-mindmap.git"
-  },
-  "author": "MichaelDuo",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MichaelDuo/duo-mindmap/issues"
-  },
-  "homepage": "https://github.com/MichaelDuo/duo-mindmap#readme",
-  "devDependencies": {
-    "@types/uuid": "^7.0.0",
-    "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.1.3",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  },
-  "dependencies": {
-    "uuid": "^7.0.2"
-  }
+	"name": "duo-mindmap",
+	"version": "1.0.0",
+	"description": "",
+	"main": "",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack",
+		"dev": "webpack-dev-server"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/MichaelDuo/mindmap.git"
+	},
+	"author": "MichaelDuo",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/MichaelDuo/mindmap/issues"
+	},
+	"homepage": "https://github.com/MichaelDuo/mindmap#readme",
+	"devDependencies": {
+		"@types/uuid": "^7.0.0",
+		"css-loader": "^3.4.2",
+		"html-webpack-plugin": "^3.2.0",
+		"source-map-loader": "^0.2.4",
+		"style-loader": "^1.1.3",
+		"ts-loader": "^6.2.1",
+		"typescript": "^3.8.3",
+		"webpack": "^4.42.0",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3"
+	},
+	"dependencies": {
+		"uuid": "^7.0.2"
+	}
 }
