--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"devDependencies": {
 		"@types/lodash": "^4.14.161",
 		"@types/uuid": "^7.0.0",
+		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.4.2",
 		"html-webpack-plugin": "^3.2.0",
 		"source-map-loader": "^0.2.4",
