--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
 	"devDependencies": {
 		"@types/lodash": "^4.14.161",
 		"@types/uuid": "^7.0.0",
+		"@typescript-eslint/eslint-plugin": "^4.4.0",
+		"@typescript-eslint/parser": "^4.4.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.4.2",
+		"eslint": "^7.11.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.4",
 		"html-webpack-plugin": "^3.2.0",
+		"prettier": "^2.1.2",
 		"source-map-loader": "^0.2.4",
 		"style-loader": "^1.1.3",
 		"ts-loader": "^6.2.1",
