--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	"dependencies": {
 		"@shopify/draggable": "^1.0.0-beta.11",
 		"lodash": "^4.17.20",
+		"normalize.css": "^8.0.1",
 		"uuid": "^7.0.2"
 	}
 }
