--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"@shopify/draggable": "^1.0.0-beta.11",
 		"lodash": "^4.17.20",
 		"normalize.css": "^8.0.1",
-		"uuid": "^7.0.2"
+		"uuid": "^7.0.2",
+		"y-websocket": "^1.3.10",
+		"yjs": "^13.4.14"
 	}
 }
