--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack",
-		"dev": "webpack-dev-server"
+		"dev": "webpack-dev-server",
+		"serve": "HOST=0.0.0.0 PORT=1234 npx y-websocket-server"
 	},
 	"repository": {
 		"type": "git",
@@ -36,14 +37,15 @@
 		"typescript": "^3.8.3",
 		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.11.0"
+		"webpack-dev-server": "^3.11.0",
+		"ws": "^7.4.3",
+		"y-websocket": "^1.3.11",
+		"yjs": "^13.5.0"
 	},
 	"dependencies": {
 		"@shopify/draggable": "^1.0.0-beta.11",
 		"lodash": "^4.17.20",
 		"normalize.css": "^8.0.1",
-		"uuid": "^7.0.2",
-		"y-websocket": "^1.3.10",
-		"yjs": "^13.4.14"
+		"uuid": "^7.0.2"
 	}
 }
